RESOLVED FIXED30480
REGRESSION: SVG Mask doesn't work for maskContentUnits="objectBoundingBox"
https://bugs.webkit.org/show_bug.cgi?id=30480
Summary REGRESSION: SVG Mask doesn't work for maskContentUnits="objectBoundingBox"
Dirk Schulze
Reported 2009-10-17 12:02:28 PDT
The test svg/W3C-SVG-1.1/masking-intro-01-f.svg fails. This is a regression after bug 41193. The apparently wrong calculation of the offset was made to support maskContentUnits="objectBoundingBox" but breaks maskContentUnits="userSpaceOnUse". The patch in 41193 added support for the other mode by breaking objectBoundingBox.
Attachments
Fix mask context location, linerRGB as default color-space. (181.59 KB, patch)
2009-10-17 13:09 PDT, Dirk Schulze
no flags
Fix mask context location, linerRGB as default color-space. (181.59 KB, patch)
2009-10-17 14:12 PDT, Dirk Schulze
zimmermann: review+
Dirk Schulze
Comment 1 2009-10-17 13:09:27 PDT
Created attachment 41364 [details] Fix mask context location, linerRGB as default color-space. This patch fixes an issue of r49598. The maskDestRect shouldn't be used to calculate the position of he masking context. It's just the location and size of the mask image. Use another FloatPoint for the context position. It also change the default color-space to linearRGB according to the spec. This must be adapted by other platforms and just works with CG atm.
Dirk Schulze
Comment 2 2009-10-17 14:12:01 PDT
Created attachment 41366 [details] Fix mask context location, linerRGB as default color-space. typo in last patch
Nikolas Zimmermann
Comment 3 2009-10-18 14:01:51 PDT
Comment on attachment 41366 [details] Fix mask context location, linerRGB as default color-space. Looks fine, r=me.
Dirk Schulze
Comment 4 2009-10-18 14:38:54 PDT
fix landed in r49757.
Note You need to log in before you can comment on or make changes to this bug.