2009-10-18  Dirk Schulze  <krit@webkit.org>

Reviewed by Nikolas Zimmermann.

        REGRESSION: SVG Mask doesn't work for maskContentUnits="objectBoundingBox"
        [https://bugs.webkit.org/show_bug.cgi?id=30480]

        Patch for SVGMaskElement landed in r49598 should correct the location of
        the mask image graphics context. It only corrects the location for userSpaceOnUse
        mode in maskContentUnits but breaks objectBoundingBoxMode.
        The maskDestRect shouldn't be moved. It is not responsible for the correct context
        postioin but for the correct position of the mask image.
        This patch calculates the context postion independently from the maskDestRect.
        It also uses lineareRGB color space for masking on CG now. This is the default
        color space for masking operations.
        We already have tests for both maskContentUnits modes.

            *svg/W3C-SVG-1.1/masking-intro-01-f.svg
            *svg/custom/mask-with-default-value.svg

        Some tests needed new pixel tests because of the new color space.

        * svg/SVGMaskElement.cpp:
        (WebCore::SVGMaskElement::drawMaskerContent):

        The color space of masking operations in SVG changed to linearSVG.
        This needs an update of some masking pixel tests.

        * platform/mac/svg/W3C-SVG-1.1/masking-intro-01-f-expected.checksum:
        * platform/mac/svg/W3C-SVG-1.1/masking-intro-01-f-expected.png:
        * platform/mac/svg/batik/masking/maskRegions-expected.checksum:
        * platform/mac/svg/batik/masking/maskRegions-expected.png:
        * platform/mac/svg/custom/grayscale-gradient-mask-expected.checksum:
        * platform/mac/svg/custom/grayscale-gradient-mask-expected.png:


Canonical link: https://commits.webkit.org/41212@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49757 268f45cc-cd09-0410-ab3c-d52691b4dbfc